name:          bls
version:       0.0.0
synopsis:      Boneh–Lynn–Shacham signature scheme.
description:   A high-level API for signing and verifying message digests using the BLS signature scheme.
license:       GPL-3
license-file:  LICENSE
copyright:     2017 DFINITY Stiftung
author:        Ben Lynn <blynn@dfinity.org>
maintainer:    Enzo Haussecker <enzo@dfinity.org>
stability:     Experimental
category:      Crypto
homepage:      https://github.com/dfinity/hs-bls
bug-reports:   https://github.com/dfinity/hs-bls/issues
build-type:    Simple
cabal-version: >=1.10

library
  build-depends:
    base,
    binary,
    bindings-DSL,
    bytestring,
    containers
  c-sources:
    cbits/hs-bls.c
  cc-options:
    -fPIC
  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
  default-language:
    Haskell2010
  exposed-modules:
    Crypto.BLS
  extra-libraries:
    bls384
    crypto
    gmpxx
    mcl
    stdc++
  ghc-options:
    -O2
    -Wall
    -fno-warn-unused-top-binds
  hs-source-dirs:
    src

test-suite bls-unit-tests
  build-depends:
    HUnit,
    QuickCheck,
    base,
    binary,
    bindings-DSL,
    bytestring,
    containers,
    random-shuffle
  c-sources:
    cbits/hs-bls.c
  cc-options:
    -fPIC
  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    RecordWildCards
  default-language:
    Haskell2010
  extra-libraries:
    bls384
    crypto
    gmpxx
    mcl
    stdc++
  ghc-options:
    -O2
    -Wall
    -fno-warn-orphans
    -fno-warn-unused-top-binds
  hs-source-dirs:
    src,
    test
  main-is:
    Test.hs
  other-modules:
    Crypto.BLS
  type:
    exitcode-stdio-1.0
